--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Js-TodoList</title>
 
         <!-- link bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -26,20 +26,19 @@
 
     <body>
 
-        <!-- header -->
-        <header>
-            <div class="container"> Header</div>
-        </header>
+        <div id="app">
+            <!-- Input section -->
+            <div>
+                <input type="text" placeholder="Inserisci nuovi task...">
+                <button>Aggiungi</button>
+            </div>
 
-        <!-- main -->
-        <main>
-            <div class="container"> Main</div>
-        </main>
-
-        <!-- footer -->
-        <footer>
-            <div class="container"> Footer</div>
-        </footer>
+            <!-- List section -->
+            <ul>
+                <li v-for="(listElem, i) in todo"> {{listElem.task}}</li>
+            </ul>
+        
+        </div>
         
 
         <!-- Link bootstrap JavaScript -->
