--- a/index.html
+++ b/index.html
@@ -27,19 +27,28 @@
     <body>
 
         <div id="app">
-            <!-- Input section -->
-            <div>
-                <input type="text" placeholder="Inserisci nuovi task...">
-                <button>Aggiungi</button>
-            </div>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <!-- Input section -->
+                    <div class="col-6 text-center my-3">
+                        <input type="text" v-model="newtodo" placeholder="Inserisci nuovi task...">
+                        <!-- debug Input -->
+                        <!-- <p>{{newtodo}}</p> -->
+                        <button @click="createNewTask(newtodo)">Aggiungi</button>
+                    </div>
 
-            <!-- List section -->
-            <ul>
-                <li v-for="(listElem, i) in todo" :class="manageDoneTasks(i)"> 
-                    {{listElem.task}} <span @click="deleteTasks(index)" class="ms-5"><i class="bi bi-x-circle"></i></span>
-                </li>
-            </ul>
-            <p v-if="todo.length == 0">Non ci sono tasks :(</p>
+                    <div class="col-12">
+                        <!-- List section -->
+                        <ul>
+                            <li class="my-2 py-2 ps-4" v-for="(listElem, i) in todo" :class="manageDoneTasks(i)"> 
+                                {{listElem.task}} <span @click="deleteTasks(index)" class="ms-5"><i class="bi bi-x-circle"></i></span>
+                            </li>
+                        </ul>
+                        <p class="fs-4 text-center" v-if="todo.length == 0">Non ci sono tasks :(</p>
+                    </div>
+                </div>
+
+            </div>
         
         </div>
         
