--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
                     <div class="col-12">
                         <!-- List section -->
                         <ul>
-                            <li class="my-2 py-2 ps-4" v-for="(listElem, i) in todo" :class="manageDoneTasks(i)"> 
-                                {{listElem.task}} <span @click="deleteTasks(index)" class="ms-5"><i class="bi bi-x-circle"></i></span>
+                            <li class="my-2 py-2 ps-4" v-for="(listElem, i) in todo" :class="manageDoneTasksClass(i)"> 
+                                {{listElem.task}} 
+                                <span @click="manageDoneTasks(i)" class="ms-4"><i class="bi bi-check-square"></i></span> 
+                                <span @click="deleteTasks(i)" class="red-color ms-4"><i class="bi bi-x-circle"></i></span>
                             </li>
                         </ul>
                         <p class="fs-4 text-center" v-if="todo.length == 0">Non ci sono tasks :(</p>
