--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div id="app">
             <div class="container">
-                <div class="row justify-content-center">
+                <div class="row mt-5 justify-content-center">
                     <div class="col-12">
                         <h2 class="text-white my-3 text-center fs-2 fw-bold">TO DO LIST</h2>
                     </div>
