--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                         <ul>
                             <li class="my-2 py-2 ps-4" v-for="(listElem, i) in todo" :class="manageDoneTasksClass(i)"> 
                                 {{listElem.task}} 
-                                <span @click="manageDoneTasks(i)" class="ms-4"><i class="bi bi-check-square"></i></span> 
-                                <span @click="deleteTasks(i)" class="red-color ms-4"><i class="bi bi-x-circle"></i></span>
+                                <span @click="manageDoneTasks(i)" class="c-point ms-4"><i class="bi bi-check-square"></i></span> 
+                                <span @click="deleteTasks(i)" class="c-point red-color ms-4"><i class="bi bi-x-circle"></i></span>
                             </li>
                         </ul>
                         <p class="task-undone fs-4 py-5 text-center" v-if="todo.length == 0">Non ci sono tasks</p>
